fixed overflowing element

--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ body {
 
 #show {
     background-color: #8336cb23;
-    height: 40vh;
+    padding: 1em;
     width: 60vw;
     margin: auto;
     margin-top: 3em;
